--- a/src/main/resources/static/css/passwordforgotten.css
+++ b/src/main/resources/static/css/passwordforgotten.css
@@ -61,17 +61,18 @@ main {
     align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
+.center .title{
+    font-weight: bold;
+    font-size: large;
+    color: white;
+    text-align: center;
+}
 .container{
     max-width: 360px;
     width:100%;
     background: #ffff;
     padding: 25px 30px;
     border-radius: 5px;
-}
-
-.container .title{
-    font-size: 20px;
-    font-weight: 500;
 }
 .container form{
     margin-top: -20px;
@@ -95,6 +96,9 @@ form .data input{
     border: 1px solid lightgrey;
     border-bottom-width: 2px;
 }
+form .mdp{
+    text-align: center;
+}
 form .mdp input{
     outline: none;
     color:#fff;
@@ -104,6 +108,7 @@ form .mdp input{
     padding: 10px;
     border-radius: 5px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
+    text-align: center;
 }
 @media only screen and (max-width: 700px) {
     main{
