--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -21,7 +21,7 @@
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div class="center">
-        <div class="title"><strong>Entrez votre adresse email!</strong></div>
+        <div class="title">Entrez votre adresse email!</div>
         <p th:text="${success}"></p>
         <p th:text="${error}"></p>
         <form action="/passwordforgotten" method="post">
