--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -124,7 +124,7 @@
             <div class="button">
                 <input id="signUpButton" type="submit" value="S'inscrire">
             </div>
-            <div>
+            <div id = "centerInscrit">
                 <a class="login" href="/login">Déjà inscrit ? Connectez-vous !</a>
             </div>
         </form>
