--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -1,7 +1,3 @@
-.logo{
-    width : 9%;
-    margin-right : 20px;
-}
 .nav{
     float: right;
 }
@@ -59,7 +55,10 @@ main{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .head .homeimg{
-    width : 100%;
+    width : 60%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 40%;
 }
 .cont .container{
     display: flex;
@@ -70,22 +69,12 @@ main{
 .cont .title{
     text-align: center;
     color: #ffffff;
-    font-style: italic;
+    font-size: 3vw;
     box-shadow: 0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.28);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .cont .title:hover{
 box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
-}
-.cont .title1{
-    text-align: center;
-    color:#ffffff;
-    font-style: italic;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.28);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-.cont .title1:hover{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
 }
 body .imageenvlope{
     width: 20px;
