--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -56,10 +56,12 @@ a:hover:after {
 }
 main{
     display: flex;
-    height: 180vh;
+    height: 200%;
     justify-content: center;
     align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
+    padding-bottom: 8%;
+    padding-top: 8%;
 }
 .container{
     max-width: 700px;
