--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -91,7 +91,7 @@ main{
     background:#fff;
     border-radius : 5px;
     margin-left: 40%;
-    margin-top: -40%;
+    margin-bottom:70% ;
 }
 .formulaire .title{
     font-size: 20px;
