--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -62,6 +62,7 @@ main{
 }
 .cont .container{
     display: flex;
+    padding-top: 5%;
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
