--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -83,6 +83,7 @@ main{
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
+    padding-top: 5%;
 }
 .formulaire{
     padding : 2% 5%;
