--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -6,9 +6,6 @@
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    background: linear-gradient(135deg,#71b7e6,#9b59b6);
-}
 .sidebar{
     width: 18%;
     position: fixed;
@@ -18,45 +15,6 @@ body{
     background: white;
     max-width: 254px;
     min-width: 100px;
-}
-
-a{
-    position: relative;
-    display: block;
-    cursor: pointer;
-    padding: 8px 0;
-    color: #fff;
-    text-decoration: none;
-}
-a:hover{
-    color: #fff;
-    text-decoration: none;
-}
-a:before, a:after {
-    content: '';
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    bottom: -2px;
-    background: #fff;
-}
-a:before {
-    left: 0;
-}
-a:after {
-    right: 0;
-    background: #fff;
-    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-a:hover:before {
-    background: #fff;
-    width: 100%;
-    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-a:hover:after {
-    background: transparent;
-    width: 100%;
-    transition: 0s;
 }
 .siderbar-logo{
     padding-left: 2rem;
@@ -96,18 +54,58 @@ a:hover:after {
     font-size: 1.5rem;
     padding-right: 1rem;
 }
-.main-content{
-    margin-left: 18%;
-    height: 900px;
+a{
+    position: relative;
+    display: block;
+    cursor: pointer;
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+}
+a:hover{
+    color: #fff;
+    text-decoration: none;
+}
+a:before, a:after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: -2px;
+    background: #fff;
+}
+a:before {
+    left: 0;
+}
+a:after {
+    right: 0;
+    background: #fff;
+    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:before {
+    background: #fff;
+    width: 100%;
+    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:after {
+    background: transparent;
+    width: 100%;
+    transition: 0s;
+}
+main{
+    display: flex;
+    height: 180vh;
+    justify-content: center;
+    align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 header{
     display: flex;
     justify-content: space-between;
+    margin-left: 19%;
 }
 header h1{
     color: white;
-    margin-left:1%;
 }
 h1{
     font-size: 2.6vw;
@@ -115,6 +113,14 @@ h1{
 .logo{
     width: 100px;
     height: 100px;
+}
+main{
+    justify-content: space-between;
+}
+.main-content{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 nav{
      text-align: right;
@@ -130,8 +136,9 @@ nav ul li a {
     padding: 0px 20px;
 }
 .cont{
-    position: center;
-    margin: auto;
+    padding : 1% 1%;
+    margin-left: 15%;
+    margin-bottom:40%;
     max-width: 100%;
     width: 100%;
     justify-content: center;
@@ -159,10 +166,12 @@ nav ul li a {
 }
 .sub-container .description{
     text-align: center;
+    font-size: 1.5vw;
 }
 .sub-container .description1{
     text-align: center;
     margin-top: 12%;
+    font-size: 1.5vw;
 }
 .container .sub-container:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.55), 0 10px 10px rgba(0,0,0,0.52);
