--- a/src/main/resources/static/css/managepayments.css
+++ b/src/main/resources/static/css/managepayments.css
@@ -6,9 +6,6 @@
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    background: linear-gradient(135deg,#71b7e6,#9b59b6);
-}
 .sidebar{
     width: 18%;
     position: fixed;
@@ -18,11 +15,6 @@ body{
     background: white;
     max-width: 254px;
     min-width: 100px;
-}
-.main-content{
-    margin-left: 18%;
-    height: 900px;
-    background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .siderbar-logo{
     padding-left: 2rem;
@@ -62,16 +54,23 @@ body{
     font-size: 1.5rem;
     padding-right: 1rem;
 }
+main{
+    display: flex;
+    height: 180vh;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(135deg,#71b7e6,#9b59b6);
+}
 header{
     display: flex;
     justify-content: space-between;
+    margin-left: 19%;
 }
 h1{
     font-size: 2.6vw;
 }
 header h1{
     color: white;
-    margin-left: 1%;
 }
 .logo{
     width: 100px;
@@ -80,11 +79,26 @@ header h1{
 main{
     justify-content: space-between;
 }
+.main-content{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg,#71b7e6,#9b59b6);
+}
+.cont{
+    padding : 1% 1%;
+    margin-left: 15%;
+    margin-bottom:40%;
+    max-width: 100%;
+    width: 100%;
+    justify-content: center;
+}
 .tableau{
     display:block;
     justify-content: space-between;
-    padding: 1rem;
-    margin-left: 17%;
+    margin-bottom:50%;
+    margin-left: 18%;
+
+
 }
 table{
     width: 600px;
