--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,7 +1,8 @@
 .logo{
-    width : 8%;
+    width: 100px;
+    height: 100px;
     float : left;
-    margin-right : 20px;
+
 }
 nav{
     text-align: right;
