--- a/src/main/resources/templates/billingsuperadmin.html
+++ b/src/main/resources/templates/billingsuperadmin.html
@@ -23,7 +23,7 @@
 <main>
     <div class=formulaire>
         <div class="titre"><strong>Effectuer un paiement</strong></div>
-        <p th:text="${error}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/billingsuperadminconfirm" id="billingSuperAdminConfirm" method="post">
             <div class="user-details">
                 <div class="input-box">
