--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="textj">Rejoignez-nous !</div>
         <hr/>
-        <p th:text="${error}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/joinconfirm" id="joinConfirm" method="post">
             <div class="data">
                 <label for="associationName">Association</label>
