--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="text">Connectez-vous !</div>
         <hr/>
-        <p th:text="${error}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/loginconfirm" id="loginConfirm" method="post">
             <div class="data">
                 <label for="associationName">Association</label>
