--- a/src/main/resources/templates/managemembers.html
+++ b/src/main/resources/templates/managemembers.html
@@ -25,8 +25,8 @@
     <main>
         <div class="formulaire">
             <div class="title1"><strong>Ajouter un adhérent</strong></div>
-            <p th:text="${success}"></p>
-            <p th:text="${error}"></p>
+            <p class="succ" th:text="${success}"></p>
+            <p class="err" th:text="${error}"></p>
             <form action="/addmembersconfirm" id="addMemberConfirm" method="post">
                 <div class="user-details">
                     <div class="input-box">
