--- a/src/main/resources/templates/managepayments.html
+++ b/src/main/resources/templates/managepayments.html
@@ -23,8 +23,8 @@
     </header>
     <main>
         <div class="cont">
-        <p th:text="${success}"></p>
-        <p th:text="${error}"></p>
+        <p class="succ" th:text="${success}"></p>
+        <p class="err" th:text="${error}"></p>
         <div class="tableau">
             <table>
                 <tr>
