--- a/src/main/resources/static/css/managepayments.css
+++ b/src/main/resources/static/css/managepayments.css
@@ -92,6 +92,17 @@ main{
     width: 100%;
     justify-content: center;
 }
+.cont .err{
+    color: red;
+    font-size: 15px;
+    text-align: center;
+}
+.cont .succ{
+    color: forestgreen;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 3%;
+}
 .tableau{
     display:block;
     justify-content: space-between;
