--- a/src/main/resources/static/css/passwordforgotten.css
+++ b/src/main/resources/static/css/passwordforgotten.css
@@ -67,6 +67,17 @@ main {
     color: white;
     text-align: center;
 }
+.center .err{
+    color: red;
+    font-size: 15px;
+    text-align: center;
+}
+.center .succ{
+    color: forestgreen;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 3%;
+}
 .container{
     max-width: 360px;
     width:100%;
