--- a/src/main/resources/templates/billingmember.html
+++ b/src/main/resources/templates/billingmember.html
@@ -21,7 +21,7 @@
 <main>
     <div class=formulaire>
         <div class="titre"><strong>Effectuer un paiement</strong></div>
-        <p th:text="${error}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/billingmemberconfirm" id="billingMemberConfirm" method="post">
             <div class="user-details">
                 <div class="input-box">
