--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -22,8 +22,8 @@
 <main>
     <div class="center">
         <div class="title">Entrez votre adresse email!</div>
-        <p th:text="${success}"></p>
-        <p th:text="${error}"></p>
+        <p class="succ" th:text="${success}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/passwordforgotten" method="post">
             <div class="container">
                 <div class="data">
