--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -23,7 +23,7 @@
 <main>
     <div class="container">
         <div class="title"><strong>Inscrivez-vous !</strong></div>
-        <p th:text="${error}"></p>
+        <p class="err" th:text="${error}"></p>
         <form action="/signupsuperadminconfirm" id="signupSuperAdminConfirm" method="post">
             <div class="user-details">
                 <div class="input-box">
