--- a/src/main/resources/static/css/billingmember.css
+++ b/src/main/resources/static/css/billingmember.css
@@ -20,6 +20,15 @@ main {
     border-radius : 5px;
     justify-content: center;
 }
+input[type="submit"]:disabled {
+  filter: grayscale(1);
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  filter: grayscale(1);
+}
 .formulaire .titre{
     font-size: 20px;
     text-align: center;
