--- a/src/main/resources/static/css/billingsuperadmin.css
+++ b/src/main/resources/static/css/billingsuperadmin.css
@@ -12,6 +12,11 @@ main {
     align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  filter: grayscale(1);
+}
 .formulaire{
     padding :1% 2%;
     position: center;
