--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -6,6 +6,11 @@
     margin-right: 5.1%;
 
 }
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  filter: grayscale(1);
+}
 nav{
     text-align: right;
 }
