--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -31,10 +31,10 @@
                        th:class="${#strings.equals(page, 'managemembers')} ? active : act"><span class="G-member"></span><span>Gestion des membres</span></a>
                 </li>
                 <li>
-                    <a class="act"><span class="bill"></span><span>Billetterie</span></a>
+                    <a class="act disabled"><span class="bill"></span><span>Billetterie</span></a>
                 </li>
                 <li>
-                    <a class="act"><span class="coll"></span><span>Collectes</span></a>
+                    <a class="act disabled"><span class="coll"></span><span>Collectes</span></a>
                 </li>
                 <li>
                     <a href="/managepayments"
