--- a/src/main/resources/static/css/signupsuperadmin.css
+++ b/src/main/resources/static/css/signupsuperadmin.css
@@ -1,11 +1,13 @@
 .logo{
-    width : 8%;
+    width : 17%;
     float : left;
-    margin-right : 20px;
+    padding-left: 4%;
+    padding-right: 5%;
+
 }
 main{
     display: flex;
-    height: 220vh;
+    height: 200%;
     justify-content: center;
     align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
