--- a/src/main/resources/static/css/signupmember.css
+++ b/src/main/resources/static/css/signupmember.css
@@ -5,7 +5,7 @@
 }
 main{
     display: flex;
-    height: 180vh;
+    height: 200%;
     justify-content: center;
     align-items: center;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
