--- a/src/main/resources/static/css/signupmember.css
+++ b/src/main/resources/static/css/signupmember.css
@@ -1,7 +1,8 @@
 .logo{
-    width : 8%;
+    width : 17%;
     float : left;
-    margin-right : 20px;
+    padding-left: 4%;
+    padding-right: 5%;
 }
 main{
     display: flex;
