--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,9 +1,9 @@
 .logo{
-    width : 14%;
-    height: 90px;
+    width: 175px;
+    height: 110px;
     float : left;
-    padding-left: 3%;
-    padding-right: 4%;
+    padding-left: 45px;
+    padding-right: 45px;
 }
 .disabled {
   pointer-events: none;
