--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,9 +1,9 @@
 .logo{
-    width: 175px;
-    height: 110px;
+    width : 14.7%;
+    height: 98px;
     float : left;
-    padding-left: 45px;
-    padding-right: 45px;
+    padding-left: 3%;
+    padding-right: 4%;
 }
 .disabled {
   pointer-events: none;
