--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,6 +1,6 @@
 .logo{
-    width : 14.7%;
-    height: 98px;
+    width : 14.9%;
+    height: 6.2em;
     float : left;
     padding-left: 3%;
     padding-right: 4%;
