--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,8 +1,8 @@
 .logo{
-    width : 14.7%;
-    height: 98px;
+    width : 13%;
+    height: 6.5em;
     float : left;
-    padding-left: 3%;
+    padding-left: 4%;
     padding-right: 4%;
 }
 nav{
