--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,8 +1,9 @@
 .logo{
-    width : 17%;
+    width : 16.73%;
+    height: 100px;
     float : left;
-    padding-left: 4%;
-    padding-right: 5%;
+    padding-left: 4.4%;
+    padding-right: 4.35%;
 }
 nav{
     text-align: right;
