--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,6 +1,6 @@
 .logo{
     width : 16.73%;
-    height: 100px;
+    height: 6.2rem;
     float : left;
     padding-left: 4.4%;
     padding-right: 4.35%;
