--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="link-box">
                 <img class="image1" src="images/administrator.png">
-                <a class="link" href="/signupsuperadmin"> Admin</a>
+                <a class="link" href="/signupsuperadmin"> Créateur</a>
             </div>
         </div>
         <div class="container">
