--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -13,7 +13,9 @@
     />
     <link rel="stylesheet" href="css/signupmember.css">
     <!-- hCaptcha -->
-    <script async defer src="https://hcaptcha.com/1/api.js"></script>
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="icon" type="image/png" href="images/logo_sans_texte.png"/>
     <title>Inscription</title>
 </head>
 <body>
@@ -117,14 +119,14 @@
                            type="password" required>
                 </div>
             </div>
-            <div data-callback="submitForm"
+            <br>
+            <div class="h-captcha" data-callback="submitForm"
                  data-sitekey="faee6d9a-baec-4cc7-baa2-a3e27d9b196d">
             </div>
-            <br>
-            <div class="button">
-                <input id="signUpButton" type="submit" value="S'inscrire">
+            <div class="button disabled">
+                <input id="signUpButton" type="submit" value="S'inscrire" disabled>
             </div>
-            <div id = "centerInscrit">
+            <div id="centerInscrit">
                 <a class="login" href="/login">Déjà inscrit ? Connectez-vous !</a>
             </div>
         </form>
@@ -142,8 +144,9 @@
         const ok = await response.json();
         if (ok) {
             document.getElementById("signUpButton").disabled = false;
+            document.getElementById("signUpButton").classList.remove('disabled');
         } else {
-            window.location.href = "signup.html";
+            window.location.href = "signupmember.html";
         }
     }
 </script>
