--- a/src/main/resources/static/css/signupsuperadmin.css
+++ b/src/main/resources/static/css/signupsuperadmin.css
@@ -158,6 +158,14 @@ form .button input{
     letter-spacing: 1px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
+form .h-captcha{
+    text-align: center;
+}
+form .disabled {
+    pointer-events: none;
+    cursor: default;
+    filter: grayscale(1);
+}
 @media only screen and (max-width: 700px) {
     main{
         height: 160vh;
