--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,8 +48,12 @@
                        type="password">
             </div>
             <br>
-            <div class="connecter">
-                <input id="loginButton" type="submit" value="Se connecter">
+            <div class="h-captcha" data-callback="submitForm"
+                 data-sitekey="faee6d9a-baec-4cc7-baa2-a3e27d9b196d">
+            </div>
+            <br>
+            <div class="connecter disabled">
+                <input id="loginButton" type="submit" value="Se connecter" disabled>
             </div>
             <br>
             <div>
@@ -73,6 +77,7 @@
         const ok = await response.json();
         if (ok) {
             document.getElementById("loginButton").disabled = false;
+            document.getElementById("signUpButton").classList.remove('disabled');
         } else {
             window.location.href = "login.html";
         }
