--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -199,7 +199,7 @@
             document.getElementById("signUpButton").disabled = false;
             document.getElementById("signUpButton").classList.remove('disabled');
         } else {
-            window.location.href = "signup.html";
+            window.location.href = "signupsuperadmin.html";
         }
     }
 </script>
