--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <header>
-    <img class="logo" src="Images/logo.png">
+    <img class="logo" src="images/logo.png">
 </header>
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
