--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -155,19 +155,19 @@
                     <label class="details">Prix en fonction de la taille de votre association</label>
 
                     <div class="category">
-                        <span class="price">-30 membres</span>
+                        <span class="price"><= 30 membres</span>
                         <span>0 €</span>
                     </div>
                     <div class="category">
-                        <span class="price">-200 membres</span>
+                        <span class="price"><= 200 membres</span>
                         <span>9.99 €</span>
                     </div>
                     <div class="category">
-                        <span class="price">-500 membres</span>
+                        <span class="price"><= 500 membres</span>
                         <span>19.99 €</span>
                     </div>
                     <div class="category">
-                        <span class="price">+500 membres</span>
+                        <span class="price">> 500 membres</span>
                         <span>49.99 €</span>
                     </div>
                 </div>
